--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -102,7 +102,7 @@
         <a ng-click="allowSubstitution(product)" class="on-hover-pointer">Allow Substitution?</a>
 
         <p class="qty-head">Quantity</p>
-        <ng-form name="product[{{product.Product_id}}]" ng-init="cartData.summary.productsQuantity[product.Product_id].updateInProgress = false;">
+        <ng-form name="mobproduct[{{product.Product_id}}]" ng-init="cartData.summary.productsQuantity[product.Product_id].updateInProgress = false;">
           <input ng-pattern="/[1-9*]+/"
                  name = "quantity"
                  class="form-control"
@@ -112,17 +112,17 @@
                  spellcheck="false"
                  >
           <p>
-          <span ng-show="product[product.Product_id].quantity.$dirty">
+          <span ng-show="mobproduct[product.Product_id].quantity.$dirty">
             <button class="quantity-update check"
                     ng-disabled="cartData.summary.productsQuantity[product.Product_id].updateInProgress"
-                    ng-click="updateCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id],product[product.Product_id].quantity)">
+                    ng-click="updateCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id],mobproduct[product.Product_id].quantity)">
               <i class="fa fa-check"
                  ng-class="{'fa-check' : !cartData.summary.productsQuantity[product.Product_id].updateInProgress,'fa-spinner fa-spin' : cartData.summary.productsQuantity[product.Product_id].updateInProgress}">
               </i>
             </button>
             <button class="quantity-update update-close"
                     ng-disabled="cartData.summary.productsQuantity[product.Product_id].updateInProgress"
-                    ng-click="resetQuantity(cartData.summary.productsQuantity[product.Product_id],product[product.Product_id].quantity)">
+                    ng-click="resetQuantity(cartData.summary.productsQuantity[product.Product_id],mobproduct[product.Product_id].quantity)">
               <i class="fa fa-close"></i>
             </button>
             </span>
