--- a/src/app/cart/cart-payment.html
+++ b/src/app/cart/cart-payment.html
@@ -63,10 +63,13 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
   <div class="row nomargin">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn">
-      <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn" ng-click="generateQuote()">Skip and Generate Quote</button>
+      <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn" ng-click="generateQuote()">
+        <span btn-load-indicator="Quote:Process">Skip and Generate Quote</span>
+      </button>
       <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn" ng-click="reserve()">
-        <i class="fa fa-check"></i>&nbsp
-        Confirm Reservation</button>
+        <span btn-load-indicator="Reserve:Process"><i class="fa fa-check"></i>&nbsp
+        Confirm Reservation</span>
+      </button>
     </div>
   </div>
 </div>
