--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -181,6 +181,8 @@
 			Next
 			&nbsp<i class="fa fa fa-chevron-right"></i>
 		</button>
-    <button ng-hide="userObj && !userObj.portal_login" class="btn sign_mybtn all-btn primary-btn autowidth" ng-click="generateQuote()">Generate Quote</button>
+    <button ng-hide="userObj && !userObj.portal_login" class="btn sign_mybtn all-btn primary-btn autowidth" ng-click="generateQuote()">
+      <span btn-load-indicator="Quote:Process">Generate Quote</span>
+    </button>
 	</div>
 </div>
