--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -65,7 +65,11 @@
 
 	.footer-input button {
 		margin-left: -10px;
-    margin-top: -2px;
+		margin-top: -2px;
+	}
+
+	.landing-carousel-control {
+    min-height: 250px;
 	}
 }
 
@@ -445,7 +449,7 @@
 	}
 
 	.portal-access-header {
-    padding: 14px 15px;
+	padding: 14px 15px;
 	}
 
 	.portal-access-leftpadding {
@@ -503,17 +507,28 @@
 	}
 
 	.most-rented-equip {
-		margin-left: 0;
+		margin-left: 10% !important;
+		min-width: auto !important;
+		min-height: 310px;
+	}
+
+	.landing-carousel-control {
+		min-height: 308px !important;
+	}
+
+	.landing-carousel-control .glyphicon-chevron-right {
+		color: #dddddd;
+		margin-right: 10px;
+	}
+
+	.landing-carousel-control .glyphicon-chevron-left {
+		margin-left: 10px;
 	}
 
 	.bottom-col {
 		text-align: center;
 	}
 
-	.landing-carousel-control .glyphicon-chevron-right,
-	.landing-carousel-control .glyphicon-chevron-left {
-		display: none;
-	}
 	.repair-heading {
 		padding-top: 45px;
 		padding-bottom: 45px;
@@ -525,6 +540,34 @@
 
 	.landing-top {
 		background-position: 100% 0px !important;
+	}
+	.landing-panel-group.panel {
+		background: transparent;
+		padding: 10px 15px 0;
+	}
+
+	.landing-panel-group .panel-title {
+		color: #333;
+		font-weight: 600;
+	}
+
+	.landing-panel-group .panel-body {
+		padding-left: 0;
+		padding-top: 10px;
+	}
+
+	.header-on-scroll {
+		position: static;
+		width: 100%;
+		z-index: 1000;
+		top: 0;
+		background-color: rgba(255,255,255,0.8);
+		box-shadow: none;
+	}
+
+	.header-on-scroll.fadeInDown {
+		webkit-animation-name: none;
+		animation-name: none;
 	}
 
 }
@@ -1150,15 +1193,15 @@
 	}
 
 	.substitution-div .substitution-input {
-    font-size: 2em;
+	font-size: 2em;
 	}
 	.header-spinner {
-    margin-top: 23px;
+	margin-top: 23px;
 	}
 
 	.search-buy-col .sentence {
-    padding-left: 60px;
-    padding-right: 60px;
+	padding-left: 60px;
+	padding-right: 60px;
 	}
 
 	.landing-search:after, .landing-search:before {
@@ -1187,12 +1230,13 @@
 	}
 	.rented-detail-left {
 		border-right: 0;
+		min-height: 250px;
 	}
 
 	.other-equipment {
 		margin: 0;
-    border-left: 0;
-    border-right: 0;
+		border-left: 0;
+		border-right: 0;
 	}
 
 	.view-all-btn {
@@ -1202,17 +1246,54 @@
 		background-position: 0px -100px;
 	}
 
-	.landing-carousel-control {
-		min-height: 460px;
-	}
 	.footer-team-col {
 		padding-left: 15px;
 	}
 
 	.social-share {
-		text-align: center;
+		text-align: left;
 		padding-right: 0;
 	}
+
+	.most-rented-equip {
+		margin-left: 60px;
+		min-width: 592px;
+	}
+
+	.landing-carousel-control {
+		min-height: 308px !important;
+	}
+
+	.landing-carousel-control .glyphicon-chevron-right {
+		color: #dddddd;
+		margin-right: 10px;
+	}
+
+	.landing-carousel-control .glyphicon-chevron-left {
+		margin-left: 10px;
+	}
+
+	.selected-item:after, .selected-item:before {
+		left: 55%;
+	}
+
+	.landing-image {
+		margin-top: 10%;
+	}
+
+	.software-img {
+		width: 100%;
+		margin-top: 3%;
+	}
+
+	.get-news {
+		padding-right: 50%;
+	}
+
+	.footer-input {
+		width: 50%;
+	}
+
 }
 
 @media screen and (max-width: 480px) {
@@ -1399,6 +1480,13 @@
 	}
 	.skip-btn {
 		margin-left: 0 !important;
+	}
+	.get-news {
+		padding-right: 10%;
+	}
+
+	.footer-input {
+		width: 100%;
 	}
 }
 
