--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -20,8 +20,7 @@
         </td>
         <td class="equipment-desc">
           <h3>{{product.Product_name}}</h3>
-          <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
-          <a ng-click="allowSubstitution(product)" class="on-hover-pointer">Allow Substitution?</a>
+          <a ng-click="allowSubstitution(product)" ng-show="userObj && userObj.portal_login" class="on-hover-pointer">Allow Substitution?</a>
 
           <ul class="price-ul">
             <li>
@@ -97,10 +96,7 @@
       </div>
       <div class="equipment-desc">
         <h3>{{product.Product_name}}</h3>
-        <!-- <input type="checkbox" style="margin: 3px 0 0 0;" ng-model="cartData.summary.productsQuantity[product.Product_id].allowSubstitution"><span class="marker">Allow Substitution?</span> -->
-
-        <a ng-click="allowSubstitution(product)" class="on-hover-pointer">Allow Substitution?</a>
-
+        <a ng-click="allowSubstitution(product)" ng-show="userObj && userObj.portal_login" class="on-hover-pointer">Allow Substitution?</a>
         <p class="qty-head">Quantity</p>
         <ng-form name="mobproduct[{{product.Product_id}}]" ng-init="cartData.summary.productsQuantity[product.Product_id].updateInProgress = false;">
           <input ng-pattern="/[1-9*]+/"
