landing ui changes

--- a/src/app/equipment-sell/equipment-sell.html
+++ b/src/app/equipment-sell/equipment-sell.html
@@ -69,23 +69,23 @@
             <label class="sell_lebal">Description</label>
             <textarea class="form-control" rows="5" id="comment" placeholder="Write description about equipment. Max 500 words."></textarea>
           </div>
-          <div class="form-group form-group-sell">
+          <!-- <div class="form-group form-group-sell">
             <span class="in-block fname_in sell_lebal">Daily Price</span>
             <span class="in-block fname_in flot-right sell_lebal">Weekly Price</span>
 
-          </div>
-          <div class="form-group">
+          </div> -->
+          <!-- <div class="form-group">
             <input type="email" class="form-control in-block fname_in " id="email" placeholder="Enter daily rent price">
             <input type="email" class="form-control in-block fname_in flot-right " id="email" placeholder="Enter weekly rent price">
-          </div>
+          </div> -->
           <div class="form-group form-group-sell">
-            <span class="in-block fname_in sell_lebal">Monthly Price</span>
-            <span class="in-block fname_in flot-right sell_lebal">Purchase Price</span>
+            <span class="in-block fname_in sell_lebal">Asking Price</span>
+            <!-- <span class="in-block fname_in flot-right sell_lebal">Purchase Price</span> -->
 
           </div>
           <div class="form-group">
-            <input type="email" class="form-control in-block fname_in" id="email" placeholder="Enter monthly rent price">
-            <input type="email" class="form-control in-block fname_in flot-right" id="email" placeholder="Enter purchase price">
+            <input type="text" class="form-control in-block fname_in" id="email" placeholder="Enter price">
+            <!-- <input type="email" class="form-control in-block fname_in flot-right" id="email" placeholder="Enter purchase price"> -->
           </div>
           <hr>
 
