--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -80,7 +80,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-buy-col">
-						<h3 class="sentence hidden-xs">Search or Buy Construction
+						<h3 class="sentence hidden-xs">Rent or Buy Construction
 							<div class="slidingVertical">
 								<span>Equipments</span>
 								<span>Parts</span>
