Quote details page

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -54,7 +54,7 @@
                   </div>
                   <div class="form-group" valdr-form-group>
                     <input type="email" autocomplete="off" class="form-control" ng-model="loginData.email" name="email"
-                           ng-required="true" placeholder="Phone, email or username">
+                           ng-required="true" placeholder="Email">
                   </div>
                   <div class="form-group" valdr-form-group>
                     <input type="password" autocomplete="off" name="password" ng-model="loginData.password" ng-required="true"
