--- a/src/app/quotes-detail/guest-quote-details.html
+++ b/src/app/quotes-detail/guest-quote-details.html
@@ -6,12 +6,17 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <load-indicator loading="!flags.orderFetched"></load-indicator>
   <div ng-show="flags.orderFetched">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_mar nopadding">
+      <p class="theme_clr reserve-success-heading heading-text">
+        Thank You. Your quote has been generated and we have sent you a copy of this on your email address
+      </p>
+      </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
       <!--<a href="#/quota-n-reservations" class="desc-text"><i class="fa fa-chevron-left"></i>&nbsp Back to Quotes List</a>-->
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quotes-id">
       <h3 class="go-back-text">
-        Quote #23456
+        Quote #{{order.Order_id}}
         <span class="pull-right">Date: {{order.Order_date}}</span>
       </h3>
     </div>
@@ -40,9 +45,9 @@
             <p class="desc-text">{{product.Product_Quantity}}</p>
           </td>
           <td class="duration vertically-middle">
-            <p>12 Dec, 2015 - 23:00</p>
+            <p>{{order.Start_date}} - {{order.Start_time}}</p>
             <p class="to">to</p>
-            <p>14 Dec, 2015 - 11:30</p>
+            <p>{{order.End_date}} - {{order.End_time}}</p>
           </td>
           <td class="vertically-middle pull-center pricing">${{product.Total_Rate}}</td>
         </tr>
@@ -73,8 +78,8 @@
         <p>{{order.Jobsite.Address1}}</p>
         <p>{{order.Jobsite.City}}</p>
         <p class="zip">Zip Code: {{order.Jobsite.Postal}}</p>
-        <i class="fa fa-phone-square zip marker go-back-text"></i>
-        <span class="marker go-back-text">+{{order.Jobsite.Phone}}</span>
+        <i class="fa fa-phone-square zip marker go-back-text" ng-if="order.Jobsite.Phone"></i>
+        <span class="marker go-back-text" ng-if="order.Jobsite.Phone">+{{order.Jobsite.Phone}}</span>
         <!--<br>-->
         <!--<i class="fa fa-user marker go-back-text"></i>-->
         <!--<span class="marker go-back-text">-->
@@ -104,9 +109,9 @@
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="bottommargin"></div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn">
-      <button class="btn sign_mybtn all-btn primary-btn"><i class="fa fa-download"></i>&nbsp Download</button>
-    </div>
+    <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn">-->
+      <!--<button class="btn sign_mybtn all-btn primary-btn"><i class="fa fa-download"></i>&nbsp Download</button>-->
+    <!--</div>-->
   </div>
 </div>
 </div>
