--- a/src/app/quotes-detail/quotes-detail.html
+++ b/src/app/quotes-detail/quotes-detail.html
@@ -6,7 +6,7 @@
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quotes-id">
     <h3 class="go-back-text">
-      Quote #23456
+      Quote #{{order.Order_id}}
       <span class="pull-right">Date: {{order.Order_date}}</span>
     </h3>
   </div>
