landing page changes

--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -275,7 +275,7 @@
 			<h3>Buy Certified used Equipments</h3>
 			<div class="line"></div>
 			<p class="desc-text">Buy quality equipment at the lowest price with Nobleiron. From Bobcat to JLG, excavators to boom lifts and even specialty equipment, we have whatever you're looking for offering best value for money.Save an average of 40% on construction equipment rental with Nobleiron.</p>
-			<button class="btn all-btn primary-btn sign_mybtn" ui-sref="hm.help">Enquire Now</button>
+			<button class="btn all-btn primary-btn sign_mybtn" ui-sref="hm.search.results({ type : 'buy'})">Enquire Now</button>
 		</div>
 	</div>
 </div>
