--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -274,8 +274,8 @@
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading offers-col">
 			<h3>Buy Certified used Equipments</h3>
 			<div class="line"></div>
-			<p class="desc-text">Buy quality equipment at the lowest price with Nobleiron. From Bobcat to JLG, excavators to boom lifts and even specialty equipment, we have whatever you're looking for offering best value for money.Save an average of 40% on construction equipment rental with Nobleiron.</p>
-			<button class="btn all-btn primary-btn sign_mybtn" ui-sref="hm.search.results({ type : 'buy'})">Enquire Now</button>
+			<p class="desc-text">With Noble Iron Certified equipment, you can now have confidence that equipment you purchase isn’t on the verge of breaking down. We perform a thorough inspection of all Noble Iron  Certified equipment to ensure that the machine is in great, working condition. We offer a money back guarantee and extended service contracts so you protect you investment.</p>
+			<button class="btn all-btn primary-btn sign_mybtn" ui-sref="hm.search.results({ type : 'buy'})">Browse Equipments</button>
 		</div>
 	</div>
 </div>
@@ -290,7 +290,7 @@
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading offers-col">
 				<h3>Sell your Equipment</h3>
 				<div class="line"></div>
-				<p class="desc-text">When you aren't using your equipment and its getting rust,<br> let it raise money for you by selling it to us. We give best price when you sell<br> equipments to us.</p>
+				<p class="desc-text">When you sell your equipment with Noble Iron, you have a whole team of experts working for you – sales, marketing, internet services, customer service, accounting and more. Our all-inclusive service saves you time and money, so you can focus on running your business while we work to get you maximum returns.</p>
 				<button class="btn all-btn primary-btn sign_mybtn autowidth" ui-sref="hm.sellEquipment">&nbsp;&nbsp;&nbsp;Sell Now&nbsp;&nbsp;&nbsp;</button>
 			</div>
 		</div>
@@ -306,8 +306,8 @@
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 most-rented-heading repair-heading offers-col">
 			<h3>Fleet Maintenance and Re-conditioning</h3>
 			<div class="line"></div>
-			<p class="desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud xercitation ullamco laboris nisi ut aliquip ex ea commodo	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est aborum.</p>
-			<button class="btn all-btn primary-btn sign_mybtn" id="software">Enquire Now</button>
+			<p class="desc-text">Join the many satisfied Noble Iron fleet maintenance customers that are saving thousands annually by turning over the hassles of maintaining and managing their equipment fleet to our team of equipment professionals. Noble Iron can provide you faster equipment repair turnaround time, Increased equipment productivity and Extended equipment life. To learn more about this and Insightful Key Performance Indicator (KPI) management reports contact us today.</p>
+			<button class="btn all-btn primary-btn sign_mybtn" id="software">Learn More</button>
 		</div>
 	</div>
 </div>
