--- a/src/app/quotes-detail/guest-quote-details.html
+++ b/src/app/quotes-detail/guest-quote-details.html
@@ -34,7 +34,7 @@
         <tbody>
         <tr ng-repeat="product in order.Products">
           <td class="vertically-middle">
-            <img ng-src="{{product.Product_Image}}"  err-src>
+            <img ng-src="{{product.Product_Image}}"  err-src style="width: 150px;">
           </td>
           <td class="equipment-desc vertically-middle quotes-equip">
             <a class="heading-text on-hover-pointer marker">{{product.Product_name}}</a>
