--- a/src/app/requests/requests.html
+++ b/src/app/requests/requests.html
@@ -5,6 +5,8 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 my-bottm-line manage_job_tit">
         Requests
+        <pickup-requests></pickup-requests>
+        <service-requests></service-requests>
       </div>
     </div>
     <!-- End Payment Content -->
