get the software page, team page, board of directors page and othe changes from mail

--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -41,7 +41,7 @@
 						</li>
 					</ul>
 				</td>
-				<td class="quantity vertically-middle review-qty">
+				<td class="vertically-middle review-qty">
 					{{cartData.summary.productsQuantity[product.Product_id].qty}}
 				</td>
 				<td class="vertically-middle pricing">${{product.Total_rate}}</td>
