--- a/src/app/equipment-sell/equipment-sell.html
+++ b/src/app/equipment-sell/equipment-sell.html
@@ -89,7 +89,7 @@
           </div>
           <hr>
 
-          <button type="submit" class="btn btn-default flot-right sign_mybtn">Sign Up</button>
+          <button type="submit" class="btn all-btn primary-btn flot-right sign_mybtn">Sign Up</button>
 
         </form>
       </div>
@@ -104,7 +104,7 @@
             Our team advisors are 24/7 at your service to
             help you.
           </p>
-          <p class="help_clr"><a   class="">help@nobleiron.com</a></p>
+          <p class="help_clr"><a href="mailto:help@nobleiron.com" class="">help@nobleiron.com</a></p>
           <p class="skype_tex"><i class="fa fa-phone"></i>
             1-800-123-HELLO</p>
         </div>
