--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -27,7 +27,8 @@
             <li>Investor Relations: (832) 767-4424</li>
             <li>Email: <a href="mailto:customercare@nobleiron.com" class="color-blue">customercare@nobleiron.com</a></li>
             <li>
-              <p class="nopadding"> <i class="fa fa-map-marker color-white"></i>&nbsp Address: 505 Rankin Road Houston,<br> TX 77073</p>
+              <p class="nopadding"> <i class="fa fa-map-marker color-white"></i>&nbsp 505 Rankin Road<br>
+               Houston - TX 77073</p>
             </li>
           </ul>
         </div>
