--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -82,13 +82,13 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-buy-col">
 						<h3 class="sentence hidden-xs">Rent or Buy Construction
 							<div class="slidingVertical">
-								<span>Equipments</span>
+								<span>Equipment</span>
 								<span>Parts</span>
 								<span>Accesories</span>
 								<span>Attachments</span>
 							</div>
 						</h3>
-						<h3 class="sentence visible-xs">Search or Buy Construction Equipments</h3>
+						<h3 class="sentence visible-xs">Rent or Buy Construction Equipment</h3>
 						<p class="rent-buy-option">
 							<a href="" ng-click="toggleRentOrBuy(true)" ng-class="{'active': flags.rented}">RENT</a>
 							<a href="" ng-click="toggleRentOrBuy(false)" ng-class="{'active': !flags.rented}">BUY</a>
@@ -201,7 +201,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center most-rented-heading">
-				<h3>Most Bought</h3>
+				<h3>Most Purchased</h3>
 				<div class="line"></div>
 			</div>
 		</div>
