--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -266,7 +266,7 @@
                     <input type="text" class="form-control" ng-model="UserRegisterData.phone" name="phone" placeholder="Phone" autocomplete="off">
                   </div>
                   <div class="need_help">
-                    <input type="checkbox" ng-model="UserRegisterData.termsAccepted">
+                    <input type="checkbox" ng-model="UserRegisterData.termsAccepted" class="signup-terms-checkbox">
                       <span>By Signing up, you agree to NobleIron's </span><a href="/#/terms-n-conditions">Terms &
                     Conditions</a></div>
                   <hr>
