--- a/src/app/order-history/order-history.html
+++ b/src/app/order-history/order-history.html
@@ -163,8 +163,10 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
           </p>
-          <p class="theme_clr desc-text">
-            Track Here
+          <p>
+            <a class="theme_clr desc-text">
+              Track Here
+            </a>
           </p>
           <button type="button" class="btn sell-equ all-btn" data-toggle="modal" data-target="#myModal">Help</button>
           <div class="modal fade" id="myModal" role="dialog">
@@ -254,7 +256,7 @@
             Our team advisors are 24/7 at your service to
             help you.
           </p>
-          <p class="help_clr desc-text"><a  >help@nobleiron.com</a></p>
+          <p class="help_clr desc-text"><a href="mailto:help@nobleiron.com">help@nobleiron.com</a></p>
           <p class="skype_tex desc-text"><i class="fa fa-phone"></i>
             1-800-123-HELLO</p>
         </div>
