--- a/src/app/board-of-directors/board-of-directors.html
+++ b/src/app/board-of-directors/board-of-directors.html
@@ -14,8 +14,205 @@
 			<a ui-sref="hm.annualMeeting" class="btn sell-equ all-btn">2015 Annual Meeting</a>
 			<a ui-sref="hm.contactUs" class="btn sell-equ all-btn">Contact Us</a>
 		</div>
-		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col">
-			Coming Soon
+		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col lr-padding">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<uib-accordion>
+						<uib-accordion-group class="team-accordion-group">
+							<uib-accordion-heading>
+								<a href="" class="thumbnail">
+						      <img src="../assets/images/avtar.png" alt="Team Picture">
+						    </a>
+								<h3>Lorem Ipsum</h3>
+								<p>Lorem, ipsum</p>
+								<div class="social-share">
+									<a href="">
+										<i class="fa fa-facebook"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-twitter"></i>
+									</a>
+								</div>
+								<br>
+								<br>
+							</uib-accordion-heading>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</uib-accordion-group>
+					</uib-accordion>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<uib-accordion>
+						<uib-accordion-group class="team-accordion-group">
+							<uib-accordion-heading>
+								<a href="" class="thumbnail">
+						      <img src="../assets/images/avtar.png" alt="Team Picture">
+						    </a>
+								<h3>Lorem Ipsum</h3>
+								<p>Lorem, ipsum</p>
+								<div class="social-share">
+									<a href="">
+										<i class="fa fa-facebook"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-twitter"></i>
+									</a>
+								</div>
+								<br>
+								<br>
+							</uib-accordion-heading>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</uib-accordion-group>
+					</uib-accordion>
+				</div>
+			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<uib-accordion>
+						<uib-accordion-group class="team-accordion-group">
+							<uib-accordion-heading>
+								<a href="" class="thumbnail">
+						      <img src="../assets/images/avtar.png" alt="Team Picture">
+						    </a>
+								<h3>Lorem Ipsum</h3>
+								<p>Lorem, ipsum</p>
+								<div class="social-share">
+									<a href="">
+										<i class="fa fa-facebook"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-twitter"></i>
+									</a>
+								</div>
+								<br>
+								<br>
+							</uib-accordion-heading>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</uib-accordion-group>
+					</uib-accordion>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<uib-accordion>
+						<uib-accordion-group class="team-accordion-group">
+							<uib-accordion-heading>
+								<a href="" class="thumbnail">
+						      <img src="../assets/images/avtar.png" alt="Team Picture">
+						    </a>
+								<h3>Lorem Ipsum</h3>
+								<p>Lorem, ipsum</p>
+								<div class="social-share">
+									<a href="">
+										<i class="fa fa-facebook"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-twitter"></i>
+									</a>
+								</div>
+								<br>
+								<br>
+							</uib-accordion-heading>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</uib-accordion-group>
+					</uib-accordion>
+				</div>
+			</div>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<uib-accordion>
+						<uib-accordion-group class="team-accordion-group">
+							<uib-accordion-heading>
+								<a href="" class="thumbnail">
+						      <img src="../assets/images/avtar.png" alt="Team Picture">
+						    </a>
+								<h3>Lorem Ipsum</h3>
+								<p>Lorem, ipsum</p>
+								<div class="social-share">
+									<a href="">
+										<i class="fa fa-facebook"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-twitter"></i>
+									</a>
+								</div>
+								<br>
+								<br>
+							</uib-accordion-heading>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</uib-accordion-group>
+					</uib-accordion>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<uib-accordion>
+						<uib-accordion-group class="team-accordion-group">
+							<uib-accordion-heading>
+								<a href="" class="thumbnail">
+						      <img src="../assets/images/avtar.png" alt="Team Picture">
+						    </a>
+								<h3>Lorem Ipsum</h3>
+								<p>Lorem, ipsum</p>
+								<div class="social-share">
+									<a href="">
+										<i class="fa fa-facebook"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-linkedin"></i> &nbsp  &nbsp
+									</a>
+									<a href="">
+										<i class="fa fa-twitter"></i>
+									</a>
+								</div>
+								<br>
+								<br>
+							</uib-accordion-heading>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</uib-accordion-group>
+					</uib-accordion>
+				</div>
+			</div>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
 			<ul class="list-group user-list-group about-dropdown">
