--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -154,7 +154,7 @@
                   Our team advisors are 24/7 at your service to
                   help you.
                 </p>
-                <p class="help_clr desc-text"><a  >help@nobleiron.com</a></p>
+                <p class="help_clr desc-text"><a href="mailto:help@nobleiron.com">help@nobleiron.com</a></p>
                 <p class="skype_tex desc-text"><i class="fa fa-phone"></i>
                   1-800-123-HELLO</p>
               </div>
