--- a/src/app/quotes-detail/quotes-detail.html
+++ b/src/app/quotes-detail/quotes-detail.html
@@ -2,7 +2,7 @@
   <load-indicator loading="!flags.orderFetched"></load-indicator>
   <div ng-show="flags.orderFetched">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
-    <a href="#/quota-n-reservations" class="desc-text"><i class="fa fa-chevron-left"></i>&nbsp Back to Quotes List</a>
+    <a href="#/quotes" class="desc-text"><i class="fa fa-chevron-left"></i>&nbsp Back to Quotes List</a>
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quotes-id">
     <h3 class="go-back-text">
