min height issue

--- a/src/app/get-the-software/get-the-software.html
+++ b/src/app/get-the-software/get-the-software.html
@@ -1,4 +1,4 @@
-<div class="container content-top">
+<div class="container content-top" style="min-height: auto;">
 	<div class="row">
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 get-soft-head manage_job_tit get-soft-call">Get the Software</div>
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right dash_board_tit get-soft-head get-soft-call question">
