--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -3553,6 +3553,16 @@ a:hover {
 	display: none;
 }
 
+/*contracts page*/
+
+.contracts-tab {
+	margin-top: 10px;
+}
+
+.open-contract-table {
+	margin-top: 20px;
+}
+
 
 
 
