requests page track order burron on landing page and quotes detail ui

--- a/src/app/quotes-detail/quotes-detail.html
+++ b/src/app/quotes-detail/quotes-detail.html
@@ -23,8 +23,8 @@
       </thead>
       <tbody>
       <tr ng-repeat="product in order.Products">
-        <td class="vertically-middle">
-          <img ng-src="{{product.Product_Image}}"  err-src>
+        <td class="vertically-middle quotes-detail">
+          <img ng-src="{{product.Product_Image}}"  err-src class="fullwidth">
         </td>
         <td class="equipment-desc vertically-middle quotes-equip">
           <a class="heading-text on-hover-pointer marker">{{product.Product_name}}</a>
