--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -52,11 +52,11 @@
 										<!-- mobile my account tab -->
 										<li ng-if="userObj" class="visible-xs">
 											<uib-accordion>
-										    <uib-accordion-group class="landing-panel-group">
-										      <uib-accordion-heading>
-										        {{userObj.logged_userName}}
-										      </uib-accordion-heading>
-										      <ul>
+												<uib-accordion-group class="landing-panel-group">
+													<uib-accordion-heading>
+														{{userObj.logged_userName}}
+													</uib-accordion-heading>
+													<ul>
 														<li class="list-group-item bottomborder"><a class="nopadding" href="/#/dashboard">Dashboard</a></li>
 														<li class="list-group-item bottomborder"><a class="nopadding" href="#/orders/history">Recent Orders</a></li>
 														<li class="list-group-item bottomborder"><a class="nopadding">Purchases</a></li>
@@ -65,8 +65,8 @@
 														<li class="list-group-item bottomborder"><a class="nopadding" href="/#/help">Help</a></li>
 														<li class="list-group-item bottomborder"><a class="nopadding" href="/#/logout">Logout</a></li>
 													</ul>
-										    </uib-accordion-group>
-										  </uib-accordion>
+												</uib-accordion-group>
+											</uib-accordion>
 										</li>
 									</ul>
 								</div><!-- /.navbar-collapse -->
@@ -80,6 +80,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 search-buy-col">
+						<button class="btn all-btn primary-btn sign_mybtn landing-track-button">Track Order</button>
 						<h3 class="sentence hidden-xs">Rent or Buy Construction
 							<div class="slidingVertical">
 								<span>Equipment</span>
