--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -3580,6 +3580,17 @@ a:hover {
 	-webkit-transform: rotate(270deg);
 }
 
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+	color: #555;
+    cursor: default;
+    background-color: transparent; 
+    border: 1px solid transparent; 
+    border-bottom: 1px solid #009ddc;
+    background: transparent;
+    border-color: transparent;
+    border-bottom: 1px solid #009ddc;
+}
+
 
 
 
