--- a/src/app/view-contracts/view-contracts.html
+++ b/src/app/view-contracts/view-contracts.html
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding contracts-tab">
+	<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding contracts-tab">
 		<ul class="nav nav-tabs gride-tab root-category profile-setting-category">
 			<li class="active">
 				<a tabtoggle data-toggle="tab" href="#profile-details">Open Contracts</a>
@@ -22,9 +22,9 @@
 				<a tabtoggle data-toggle="tab" href="#portal-settings">Close Contracts</a>
 			</li>
 		</ul>
-	</div>
+	</div> -->
 	<!-- Open Contracts -->
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" id="profile-details">
+	<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" id="profile-details">
 		<table class="table quotes-table open-contract-table">
 			<thead>
 				<tr>
@@ -89,10 +89,10 @@
 				</tr>
 			</tbody>
 		</table>
-	</div>
+	</div> -->
 
 	<!-- Close Contracts -->
-	<div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
+	<!-- <div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
 		<table class="table quotes-table open-contract-table">
 			<thead>
 			<tr>
@@ -150,5 +150,136 @@
 				</tr>
 			</tbody>
 		</table>
+	</div> -->
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding contracts-tab">
+		<uib-tabset>
+	    <uib-tab heading="Open Contract">
+	        <div class="form-group">
+	          <table class="table quotes-table open-contract-table">
+							<thead>
+								<tr>
+									<th>Contract Id</th>
+									<th>PO</th>
+									<th>Job Site Name</th>
+									<th class="text-right">Equipment On Rent</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+										<a class="invoice-no">12345</a>
+									</td>
+									<td>Shop</td>
+									<td>Calcrete Yard</td>
+									<td class="text-right">
+										<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+										<a class="invoice-no view-down view-down-quotation">
+											Pickup Request
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a class="invoice-no">12345</a>
+									</td>
+									<td>Shop</td>
+									<td>Calcrete Yard</td>
+									<td class="text-right">
+										<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+										<a class="invoice-no view-down view-down-quotation">
+											Pickup Request
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a class="invoice-no">12345</a>
+									</td>
+									<td>Shop</td>
+									<td>Calcrete Yard</td>
+									<td class="text-right">
+										<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+										<a class="invoice-no view-down view-down-quotation">
+											Pickup Request
+										</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a class="invoice-no">12345</a>
+									</td>
+									<td>Shop</td>
+									<td>Calcrete Yard</td>
+									<td class="text-right">
+										<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+										<a class="invoice-no view-down view-down-quotation">
+											Pickup Request
+										</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+	        </div>
+	    </uib-tab>
+	    <uib-tab heading="Close Contract">
+	      <table class="table quotes-table open-contract-table">
+					<thead>
+					<tr>
+						<th>Contract Id</th>
+						<th>Job Site Name</th>
+						<th>Date</th>
+						<th>PO</th>
+						<th></th>
+					</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								<a class="invoice-no">12345</a>
+							</td>
+							<td>Calcrete Yard</td>
+							<td>MM/DD/YYYY</td>
+							<td>Shop</td>
+							<td class="text-right">
+								<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="invoice-no">12345</a>
+							</td>
+							<td>Calcrete Yard</td>
+							<td>MM/DD/YYYY</td>
+							<td>Shop</td>
+							<td class="text-right">
+								<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="invoice-no">12345</a>
+							</td>
+							<td>Calcrete Yard</td>
+							<td>MM/DD/YYYY</td>
+							<td>Shop</td>
+							<td class="text-right">
+								<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="invoice-no">12345</a>
+							</td>
+							<td>Calcrete Yard</td>
+							<td>MM/DD/YYYY</td>
+							<td>Shop</td>
+							<td class="text-right">
+								<a class="invoice-no view-down view-down-quotation"><i class="fa fa-download invoice-no heading-text"></i></a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+	    </uib-tab>
+	  </uib-tabset>
 	</div>
 </div>
