--- a/src/app/contracts/contracts.html
+++ b/src/app/contracts/contracts.html
@@ -13,11 +13,8 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding contracts-tab">
 		<uib-tabset>
 	    <uib-tab heading="Open Contract" select="loadOpenContracts()">
-        <div ng-show="fetchOpenContractInProgress">
-          <load-indicator loading="fetchOpenContractInProgress"></load-indicator>
-        </div>
-        <div ng-style="{'visibility': fetchOpenContractInProgress ? 'hidden':'visible'}">
-	        <div class="form-group">
+        <div>
+	        <div class="form-group" cg-busy="{promise:contractPromise,message:'Loading...'}">
 	          <table class="table quotes-table open-contract-table">
 							<thead>
 								<tr>
@@ -43,14 +40,12 @@
 								</tr>
 							</tbody>
 						</table>
+            <uib-pagination total-items="flags.ContactList_Quantity * flags.Total_pages" ng-model="flags.Page"  ng-change="pageChanged()" rotate="false" boundary-link-numbers="true" force-ellipses="true"></uib-pagination>
 	        </div>
           </div>
 	    </uib-tab>
 	    <uib-tab heading="Close Contract" select="loadClosedContracts()">
-        <div ng-show="fetchClosedContractInProgress">
-          <load-indicator loading="fetchClosedContractInProgress"></load-indicator>
-        </div>
-        <div ng-style="{'visibility': fetchClosedContractInProgress ? 'hidden':'visible'}">
+        <div cg-busy="{promise:contractPromise,message:'Loading...'}">
 	      <table class="table quotes-table open-contract-table">
 					<thead>
 					<tr>
@@ -75,6 +70,7 @@
 						</tr>
 					</tbody>
 				</table>
+          <uib-pagination total-items="flags.ContactList_Quantity * flags.Total_pages"  ng-model="flags.Page" ng-change="pageChanged()" boundary-links="true" force-ellipses="true"></uib-pagination>
           </div>
 	    </uib-tab>
 	  </uib-tabset>
